# mdu

./: .gitignore  Cargo.toml  README.md  mdu.pro  mdu_linux.pro  package.json  pnpm-lock.yaml  readme.md  tailwind.config.js  test.ui
.cargo/: config.toml
resources/: shared.qrc
resources/interface/: HeaderBar.qml  MainWindow.qml  RootLayout.qml
resources/interface/components/: About.qml  DownloadItem.qml  DownloadModal.qml  ExtractorControls.qml  FileItem.qml  FilesList.qml  MenuItems.qml  MenuSection.qml  ProgressPanel.qml  SettingsPopup.qml
resources/interface/models/: ActiveDownloadsModel.qml  TypesModel.qml
resources/interface/pages/: Converter.qml  Downloads.qml  StemExtractor.qml
src/: App.css  App.tsx  i18n.ts  main.cpp
src-cef/: CMakeLists.txt
src-cef/src/: app_paths.cpp  app_paths.hpp  main.cpp
src-cli/: Cargo.toml
src-cli/src/: main.rs
src-tauri/: Cargo.toml  build.cmd  tauri.conf.json  vcpkg.json
src-tauri/src/: directory.rs  downloadmanager.rs  drives.rs  lib.rs  main.rs  system_info.rs  utils.rs
src-tauri/src/processing/: mod.rs
src-tauri/src/processing/postprocess/: ffmpeg.rs  mod.rs
src-tauri/src/processing/services/: mod.rs  youtube.rs
src/components/: errorboundary.tsx
src/components/converter/: addconversion.tsx  constants.ts  converter.tsx  converterlists.tsx  types.ts
src/components/downloads/: adddownload.tsx  download.tsx  downloaditem.tsx  downloadlists.tsx
src/components/settings/: about.tsx  appearance.tsx  directory.tsx  general.tsx  index.ts  language.tsx  settings.tsx
src/components/ui/: switch.tsx
src/components/ui/tooltip/: index.tsx
src/components/windowed/: header.tsx  layouts.tsx  sidebar.tsx  statusbar.tsx  titlebar.tsx
src/constants/: menuitems.ts
src/core/: downloadmanager.cpp  downloadmanager.hpp  ffmpeghelper.cpp  ffmpeghelper.hpp  ytdlphelper.cpp  ytdlphelper.hpp
src/core/stemextractor/: stemextractor.cpp  stemextractor.hpp  uvrhelper.cpp  uvrhelper.hpp
src/gui/: aboutqt.cpp  aboutqt.hpp  clearconfirmdialog.cpp  clearconfirmdialog.hpp  confirmdialog.cpp  confirmdialog.hpp  customdialog.cpp  customdialog.hpp  dialogmanager.cpp  dialogmanager.hpp  encoderoption.cpp  encoderoption.h  encoderoption.ui  errordialog.cpp  errordialog.hpp  framelesshelper.cpp  mainwindow.cpp  mainwindow.hpp  windowcontroller.cpp  windowcontroller.hpp  winnativeeventfilter.cpp
src/locales/: en.json  id.json  jp.json  th.json
src/types/: download.ts  language.ts  media.ts
src/utils/: devicesmanager.cpp  devicesmanager.hpp  downloadbinary.cpp  downloadbinary.hpp  format.ts  updateytdlp.cpp  updateytdlp.hpp
utils/: iconpack.py
