[package]
name = "mdu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mdu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1.83"
dirs = "5.0.1"
fs2 = "0.4.3"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
rfd = "0.15.1"
rsmpeg = "0.15.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sys-info = "0.9.1"
sysinfo = "0.33.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tokio = { version = "1.42.0", features = ["full", "time"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[package.metadata.vcpkg]
dependencies = ["ffmpeg"]
git = "https://github.com/microsoft/vcpkg"
rev = "master" 