[package]
name = "mdu"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "mdu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.94"
async-trait = "0.1.83"
dirs = "5.0.1"
fs2 = "0.4.3"
lazy_static = "1.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["json"] }
rfd = "0.15.1"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sys-info = "0.9.1"
sysinfo = "0.33.0"
# Updated Tauri configuration
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full", "time", "process"] }
urlencoding = "2.1.3"
uuid = { version = "1.11.0", features = ["v4"] }
which = "7.0.0"
windows = { version = "0.58.0", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

# Add this section if not present
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
